Connected powersave mode button in HTML and tweaked function

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     </div>
 
     <div id="temperature_display"><font size="30px"></font>"</div>
+    <br>
+    <div>
+      <h3>Powersave mode:</h3>
+    </div>
+
+    <div id="powersavemode">
+    </div>
 
   <div>
     <button type="button" class="btn btn-primary">Decrease</button>
