--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <button type="button" class="btn btn-success">Power Save</button>
     <button type="button" class="btn btn-info">Reset</button>
   </div>
+
+  <div id="energy_display"><div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="bootstrap-4.1.0-dist/js/bootstrap.min.js"></script>
     <script src="jasmine-standalone-3.1.0/src/Thermostat.js"></script>
