--- a/jasmine-standalone-3.1.0/SpecRunner.html
+++ b/jasmine-standalone-3.1.0/SpecRunner.html
@@ -12,7 +12,7 @@
   <script src="lib/jasmine-3.1.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/Thermostat.js"></script>
+  <script src="../public/javascripts/Thermostat.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
